Fix tab bar overflowing into filetree pane

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -1,7 +1,7 @@
 .tabs-shell {
   position: relative;
   background-color: #161712;
-  padding: 0px 10px 6px 0px;
+  padding: 0px 0px 6px 0px;
   height: 19px;
   box-sizing: content-box;
   overflow: hidden;
